# EasyCopy

./: README.md  main.py  pyproject.toml
