[tool.poetry]
name = "easycopy"
version = "0.1.0"
description = ""
authors = ["AKHYui <zzk4093977@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pyinstaller = "^4.9"
PySimpleGUI = "^4.57.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
